[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "github-readme-stats-cache"
description = 'Caches GitHub Readme Stats images served by a Vercel app.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp[speedups]==3.9.5",
    "celery==5.4.0",
    "certifi==2024.2.2",
    "diskcache==5.6.3",
    "multidict==6.0.5",
    "orjson==3.10.2",
    "python-dotenv==1.0.1",
    "redis==5.0.4",
    "requests==2.32.1",
    "sanic-ext==23.12.0",
    "sanic==23.12.1",
    "urllib3==2.2.1",
    "uvloop==0.19.0; platform_system != 'Windows'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/github-readme-stats-cache#readme"
Issues = "https://github.com/unknown/github-readme-stats-cache/issues"
Source = "https://github.com/unknown/github-readme-stats-cache"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]
