[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "github-readme-stats-cache"
description = 'Caches GitHub Readme Stats images served by a Vercel app.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp[speedups]==3.11.18",
    "celery==5.5.1",
    "certifi==2025.1.31",
    "diskcache==5.6.3",
    "multidict==6.4.3",
    "orjson==3.10.16",
    "python-dotenv==1.1.0",
    "redis==5.2.1",
    "requests==2.32.3",
    "sanic-ext==24.12.0",
    "sanic==25.3.0",
    "urllib3==2.4.0",
    "uvloop==0.21.0; platform_system != 'Windows'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/github-readme-stats-cache#readme"
Issues = "https://github.com/unknown/github-readme-stats-cache/issues"
Source = "https://github.com/unknown/github-readme-stats-cache"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]
