[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "github-readme-stats-cache"
description = 'Caches GitHub Readme Stats images served by a Vercel app.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp[speedups]==3.13.2",
    "beautifulsoup4==4.14.2",
    "celery==5.5.3",
    "certifi==2025.11.12",
    "diskcache==5.6.3",
    "multidict==6.7.0",
    "orjson==3.11.4",
    "python-dotenv==1.2.1",
    "redis==6.4.0",
    "requests==2.32.5",
    "sanic-ext==24.12.0",
    "sanic==25.3.0",
    "urllib3==2.6.0",
    "uvloop==0.22.1; platform_system != 'Windows'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/github-readme-stats-cache#readme"
Issues = "https://github.com/unknown/github-readme-stats-cache/issues"
Source = "https://github.com/unknown/github-readme-stats-cache"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]
